tests/baselines/reference/redeclareParameterInCatchBlock.errors.txt
tests/cases/compiler/redeclareParameterInCatchBlock.ts(4,11): error TS2492: Cannot redeclare identifier 'e' in catch clause.
tests/cases/compiler/redeclareParameterInCatchBlock.ts(10,9): error TS2492: Cannot redeclare identifier 'e' in catch clause.
tests/cases/compiler/redeclareParameterInCatchBlock.ts(16,15): error TS2492: Cannot redeclare identifier 'b' in catch clause.
tests/cases/compiler/redeclareParameterInCatchBlock.ts(21,15): error TS2451: Cannot redeclare block-scoped variable 'x'.
tests/cases/compiler/redeclareParameterInCatchBlock.ts(21,21): error TS2451: Cannot redeclare block-scoped variable 'x'.


==== tests/cases/compiler/redeclareParameterInCatchBlock.ts (5 errors) ====
    try {
    
    } catch(e) {
        const e = null;
              ~
!!! error TS2492: Cannot redeclare identifier 'e' in catch clause.
    }
    
    try {
    
    } catch(e) {
        let e;
            ~
!!! error TS2492: Cannot redeclare identifier 'e' in catch clause.
    }
    
    try {
    
    } catch ([a, b]) {
        const [c, b] = [0, 1];
                  ~
!!! error TS2492: Cannot redeclare identifier 'b' in catch clause.
    }
    
    try {
    
    } catch ({ a: x, b: x }) {
                  ~
!!! error TS2451: Cannot redeclare block-scoped variable 'x'.
                        ~
!!! error TS2451: Cannot redeclare block-scoped variable 'x'.
    
    }
    
    try {
    
    } catch(e) {
        function test() {
            let e;
        }
    }
    